--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,9 +13,11 @@ nav:
   - Projects:
     - 'Introduction': 'projects/introduction.md'
     - 'API Resources': 'projects/resources.md'
-    # - 'Collections': 'projects/collections.md'
+    - 'Key/Value': 'projects/json.md'
     - 'Access': 'projects/access.md'
+    - 'Web Hooks': 'projects/hooks.md'
     - 'Security': 'projects/security.md'
+    - 'Documentation': 'projects/documentation.md'
     - 'Settings': 'projects/settings.md'
   - Querying:
     - 'Manage Data': 'querying_data/crud.md'
@@ -23,18 +25,9 @@ nav:
     - 'Filtering': 'querying_data/filtering.md'
     - 'Sorting': 'querying_data/sorting.md'
     - 'Error Codes': 'querying_data/errors.md'
-  # - Account:
-  #   - 'Contact': 'account/contact.md'
-  #   - 'Password Reset': 'account/password.md'
-  #   - 'Billing & Plans': 'account/billing.md'
-  #   - 'Security': 'account/security.md'
-  #   - 'API Keys': 'account/apikeys.md'
-  #   - 'Support': 'account/support.md'
   - Reference:
     - 'JSON Schema': 'reference/json_schema.md'
     - 'Sample Projects': 'reference/sample_projects.md'
-  # - API:
-  #   - 'Machinable API': 'api/introduction.md'
 theme: 
   name: 'material'
   feature:
